style ride request forms

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
         <source src="/assets/vineyard.mov">
       </video>
         <div id="login">
+          <h4>Please log in</h4>
           <div 
           id="g_id_onload"
           data-client_id="<%= googleClientID %>"
