--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
   <nav>
-    <div class="nav" id="left"> "H"</div>
+    <div class="nav" id="left"></div>
     <div class="nav" id="center"><h1>Trail Rider</h1></div>
     <div class="nav" id="right">
     <% if (user) { %>
