--- a/public/stylesheets/rides/forms.css
+++ b/public/stylesheets/rides/forms.css
@@ -1,17 +1,12 @@
+main {
+  padding: 20px;
+}
+
 form {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(2, minmax(auto, 352px));
-  font-size: 20px;
-}
+  
 
-#new-meal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-items: center;
+  font-size: 16px;
 }
-
 
 table {
   margin-top: 24px;
@@ -25,16 +20,33 @@ td {
 form * {
   padding: 5px;
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 form > button {
-  grid-column: span 2;
-  width: 160px;
+
+  width: 100px;
   margin-left: auto;
-  font-size: 22px;
+  font-size: 16px;
 }
 
-#add-meal {
-  margin: 0;
+label {
+  padding: 10px;
+  margin-top: 30px;
+}
+
+p {
+  margin-bottom: 0;
+  font-weight: 500;
+}
+
+.category {
+  border: 2px solid grey;
+  border-radius: 15px;
+  padding: 20px;
+  background-color: rgb(240, 240, 235);
+}
+
+input {
+  margin-bottom: 20px;
 }
