--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 nav {
-  height: 100px;
+  height: 114px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -33,11 +33,10 @@ nav {
   font-weight: bold;
   font-size: large;
   padding: 0 20px 0 30px;
-  background-color: rgba(103, 108, 120, 1);
+  background-color: rgb(119, 125, 144);
 }
 
 nav > a {
-  margin: 20px;
   text-decoration: none;
   padding: 10px;
   border-radius: 5px;
@@ -54,7 +53,7 @@ nav > a:hover {
 }
 
 nav > a {
-  margin: 20px;
+  margin: 0px;
   text-decoration: none;
   padding: 10px;
   border-radius: 5px;
@@ -108,17 +107,23 @@ video {
 
 #login {
   display: flex;
-  margin-top: 300px;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 250px;
   justify-content: center;
   padding: 50px;
   width: 30%;
   
-  background-color: rgba(163, 168, 198, 0.25);
+  background-color: rgba(163, 168, 198, 0.2);
   color: white;
   border-radius: 15px;
   z-index: 2;
 }
 
+#login > h4 {
+  font-weight: 300;
+  margin: 0 0 30px 0;
+}
 
 
 /* body > main {
@@ -148,7 +153,6 @@ video {
 
 
 nav > div > a {
-  margin: 20px;
   text-decoration: none;
   padding: 10px;
   border-radius: 5px;
