--- a/views/rides/show.ejs
+++ b/views/rides/show.ejs
@@ -108,7 +108,7 @@
 
   </div>
 
-  <button type="submit">Update Ride Details</button>
+  <button type="submit">Update</button>
   
 </form>
 </div>
@@ -191,7 +191,7 @@ action="/rides/<%= ride._id %>/submit?_method=PATCH"
 method="POST"
 >
 
-<button type="submit">Submit Request</button>
+<button id="submit" type="submit">Submit Request</button>
 </form>
 
 </main>
