--- a/views/rides/new-1.ejs
+++ b/views/rides/new-1.ejs
@@ -7,6 +7,7 @@
   
   <h3>Contact Information</h3>
 
+  <div class="category">
   <form action="/admin/users/<%= user.profile._id %>?_method=PUT" 
     id="new-ride" 
     method="POST">
@@ -25,7 +26,7 @@
       
       <button type="submit">Save</button>
    </form>
-
+  </div>
 
 </main>
 
