style ride index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,6 +36,7 @@ nav {
   font-size: large;
   padding: 0 20px 0 30px;
   background-color: rgb(119, 125, 144);
+  z-index: 10;
 }
 
 nav > a {
@@ -179,3 +180,48 @@ nav > div > a.active {
 }
 
 
+
+
+
+table {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+
+}
+
+table thead th {
+  padding: 5px;
+  border-bottom: 2px solid #424748;
+  min-width: 50px;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+  min-width: 100px;
+}
+
+#list td:nth-child(2),
+#list td:nth-child(3) {
+  min-width: 100px;
+}
+
+#list a {
+  border-radius: 4px;
+  background-color: #b8c0c2;
+  padding: 4px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #424748;
+}
+
+#list a:visited{
+  color: #424748;
+}
+
+#list a:hover {
+  background-color: white;
+}
