--- a/views/rides/my-rides.ejs
+++ b/views/rides/my-rides.ejs
@@ -1,6 +1,6 @@
 
 <%- include("../partials/html-head") %>
-<link rel="stylesheet" href="/stylesheets/rides/show.css">
+<link rel="stylesheet" href="/stylesheets/rides/index.css">
 <%- include("../partials/nav") %>
 
 <main>
@@ -9,7 +9,7 @@
 
 
   
-
+<div class="table">
   <table>
     <thead>
       <tr>
@@ -43,6 +43,7 @@
       <% }) %>
     </tbody>
   </table>  
+</div>
 </main>
 
 <%- include("../partials/footer") %>
