--- a/views/rides/show.ejs
+++ b/views/rides/show.ejs
@@ -155,7 +155,7 @@
     </form>
     
 
-
+<div class="table">
 <table>
   <thead>
     <th>Name</th>
@@ -185,6 +185,7 @@
 
   </tbody>
 </table>
+</div>
 </div>
 <form 
 action="/rides/<%= ride._id %>/submit?_method=PATCH" 
