--- a/public/stylesheets/rides/index.css
+++ b/public/stylesheets/rides/index.css
@@ -1,35 +1,30 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
 table {
   font-size: 20px;
 }
 
 table thead th {
   padding: 5px;
+  width: 150px;
   border-bottom: 2px solid #424748;
 }
 
 table td {
   padding: 10px;
   text-align: center;
+  width: 150px;
 }
 
-#list td:nth-child(2),
-#list td:nth-child(3) {
-  min-width: 100px;
-}
-
-#list a {
-  border-radius: 4px;
-  background-color: #b8c0c2;
-  padding: 4px;
-  text-decoration: none;
-  font-size: 16px;
-  color: #424748;
-}
-
-#list a:visited{
-  color: #424748;
-}
-
-#list a:hover {
-  background-color: white;
-}
