--- a/public/stylesheets/rides/show.css
+++ b/public/stylesheets/rides/show.css
@@ -37,20 +37,49 @@ section div:nth-child(even) {
   font-weight: bold;
 }
 
-#add-review-form {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 16px;
-  margin-bottom: 20px;
-}
 
-#add-review-form > textarea {
-  width: 250px;
-}
 
 #add-review-form > button {
   font-size: 16px;
   width: 160px;
   grid-column: 2 / 3;
   margin-bottom: 24px;
+}
+
+
+table {
+  font-size: 20px;
+  
+}
+
+table thead th {
+  padding: 5px;
+  border-bottom: 2px solid #424748;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+}
+
+#list td:nth-child(2),
+#list td:nth-child(3) {
+  min-width: 100px;
+}
+
+#list a {
+  border-radius: 4px;
+  background-color: #b8c0c2;
+  padding: 4px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #424748;
+}
+
+#list a:visited{
+  color: #424748;
+}
+
+#list a:hover {
+  background-color: white;
 }
