--- a/views/rides/my-rides.ejs
+++ b/views/rides/my-rides.ejs
@@ -18,8 +18,8 @@
         <th>Number of Riders</th>
         <th>Request Status</th>
         <th>Details</th>
-        <th>Delete</th>
-        <th></th>
+        <th>Cancel</th>
+
       </tr>
     </thead>
     <tbody>
