style admin views

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,16 +1,16 @@
 <%- include("../partials/html-head") %>
+<link rel="stylesheet" href="/stylesheets/rides/index.css">
 <%- include("../partials/nav") %>
 
 
 <main>
+
   <h1>Site Administration</h1>
 
 
   <a href="/horses">Horses</a>
 
   <a href="/admin/users">Users</a>
-
-  <a href="/admin/schedule">Schedule</a>
 
 
 
