--- a/views/horses/index.ejs
+++ b/views/horses/index.ejs
@@ -10,20 +10,20 @@
   
       <a href="/horses/new"><button>Add a Horse</button></a>
 
-
+<section>
   <table>
     <thead>
       <tr>
         <th>Barn Name</th>
-        <th>Registered Name</th>
-        <th>Sex</th>
-        <th>Status</th>
-        <th>Height</th>
+        <th> &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp Registered Name   &nbsp &nbsp &nbsp &nbsp </th>
+        <th> &nbsp Sex   &nbsp &nbsp&nbsp</th>
+        <th> &nbsp  &nbsp Status  &nbsp  &nbsp</th>
+        <th> &nbsp Height  &nbsp </th>
         <th>Weight Limit</th>
         <th>Lesson Horse</th>
         <th>Trail Horse</th>
-        <th></th>
-        <th></th>
+        <th>Edit</th>
+        <th>Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -52,7 +52,7 @@
     </tbody>
   </table>
 
-
+</section>
 </main>
 
 
