--- a/public/stylesheets/rides/show.css
+++ b/public/stylesheets/rides/show.css
@@ -1,3 +1,24 @@
+body {
+  background-color: white;
+  /* Use a system font, if none are available use an available sans-sarif font */
+  margin: 0;
+
+}
+
+body > main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 20px;
+}
+
+body > main h1:first-child {
+  margin-bottom: 50px;
+}
+
+
 ul {
   margin: 0 0 16px;
   padding: 0;
@@ -39,12 +60,7 @@ section div:nth-child(even) {
 
 
 
-#add-review-form > button {
-  font-size: 16px;
-  width: 160px;
-  grid-column: 2 / 3;
-  margin-bottom: 24px;
-}
+
 
 
 table {
@@ -62,24 +78,3 @@ table td {
   text-align: center;
 }
 
-#list td:nth-child(2),
-#list td:nth-child(3) {
-  min-width: 100px;
-}
-
-#list a {
-  border-radius: 4px;
-  background-color: #b8c0c2;
-  padding: 4px;
-  text-decoration: none;
-  font-size: 16px;
-  color: #424748;
-}
-
-#list a:visited{
-  color: #424748;
-}
-
-#list a:hover {
-  background-color: white;
-}
