update delete function to redirect to admin-only view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,7 @@ body {
   background-color: white;
   margin: 0;
   color: #424748;
+  
   min-height: 100vh;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
@@ -132,33 +133,6 @@ video {
   margin: 0 0 30px 0;
 }
 
-
-/* body > main {
-  grid-area: main;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #e8eceb;
-  padding: 20px;
-} */
-
-/* body > main h1:first-child {
-  margin-bottom: 50px;
-} */
-
-
-
-/* body > nav {
-  grid-area: nav;
-  background-color: #b8c0c2;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0 20px 0 30px;
-} */
-
-
-
 nav > div > a {
   text-decoration: none;
   padding: 10px;
@@ -179,17 +153,12 @@ nav > div > a.active {
   color: white;
 }
 
-
-
-
-
 table {
   font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
-
 }
 
 table thead th {
@@ -224,4 +193,11 @@ table td {
 
 #list a:hover {
   background-color: white;
+}
+
+.category {
+  border: 2px solid grey;
+  border-radius: 15px;
+  padding: 20px;
+  background-color: rgb(240, 240, 235);
 }
