--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,8 @@
   
   
   <% if (user?.profile.avatar) { %>
-    <div>
-      <!-- <img
-        src="<%= user.profile.avatar %>"
-        alt="<%= user.profile.name %> avatar"
-      /> -->
-    </div>
-    
+
+<img src="/assets/background.png" alt="">
 
   <% } else { %>
     
