update content of ride request form

--- a/views/rides/new-2.ejs
+++ b/views/rides/new-2.ejs
@@ -77,7 +77,7 @@
 
 
   <div id="radio">
-    <p>Are ANY riders inder the age of 10?</p>
+    <p>Are ANY riders under the age of 10?</p>
     <fieldset required>
     
     <label>
