--- a/views/rides/show.ejs
+++ b/views/rides/show.ejs
@@ -77,7 +77,7 @@
 
   
   <div>
-    <p>Are ANY riders inder the age of 10?</p>
+    <p>Are ANY riders under the age of 10?</p>
     
     <fieldset>
     <label>
