compress landing page video and update login styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     
     <div id="login-video">
       <video playsinline autoplay muted loop>
-        <source src="/assets/vineyard.mov">
+        <source src="/assets/vineyard-slow.mp4">
       </video>
         <div id="login">
           <h4>Please log in</h4>
