--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,9 +128,10 @@ video {
   z-index: 2;
 }
 
-#login > h4 {
+#login > div {
   font-weight: 300;
   margin: 0 0 30px 0;
+  padding: 8px;
 }
 
 nav > div > a {
